apps/auth/authelia/ingress.yaml
# traefik.containo.us/v1alpha1 depreciated in Traefik v3
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: auth-ui
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:uslhk2LlZe6vVZlqop7lA93RSRTVSnRX,iv:XEXzRHNfgXyWaGdeoP7AutDEuyPWFPS7drQKzYcJfe4=,tag:E+ix0w0TgI99le4K2IMWwQ==,type:str]
          kind: Rule
          services:
            - name: authelia
              port: 80
          middlewares:
            - name: forwardauth-authelia
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1r3ehz4v5czfczcmfgnyuc7zmz8pjl055shhek88nsjv2xnrnkq8svjnj5c
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWUWpudHRnOGZUU0orVFQv
[...]
            ttNuPnb8soZEr8cb+Yyr2TkKgn8k6Q53b8ijSb2P0uym5CAO0/+rUw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-18T01:22:24Z"
    mac: ENC[AES256_GCM,data:kg7lqGZS3hXvYCSJ1+3ZjxS49E2eqnslvV1pMlanYX3NljqXTxEE6S4dnaBQdhlkUPW3PHt/qG/pKC68yt3bYLHaVvSfoieqPdVf1vlYHNwbdb17mCRX2CJ5HCKC8Y+OuxrBbLKFQMdvlaIR9nvSC0hLE0ijpZhOlnLeUYzJVZ4=,iv:d9g0J7lLZyFhxvU3xvVqQavbs7rkmsK6qQYLpDLIyW0=,tag:eyfLpCno2ps6WyEZjmVS2A==,type:str]
    pgp: []
    encrypted_regex: ^(match)$
    version: 3.9.1
